--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,10 @@
 			<version>${apache.commons.io.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>net.vidageek</groupId>
 			<artifactId>mirror</artifactId>
 			<version>${mirror.version}</version>
@@ -132,12 +136,8 @@
 				<artifactId>jdepend-maven-plugin</artifactId>
 				<version>2.0</version>
 			</plugin>
-			<!-- 
-			<plugin>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.4</version>
-			</plugin>
-			 -->
+			<!-- <plugin> <artifactId>maven-javadoc-plugin</artifactId> <version>2.10.4</version> 
+				</plugin> -->
 			<plugin>
 				<artifactId>maven-jxr-plugin</artifactId>
 				<version>2.5</version>
