--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,14 @@ flyway.enabled=true
 flyway.check-location=true
 flyway.locations=classpath:/db
 
+# You may change the port like that:
+#server.port=12080
+
+# Uncomment for using the native MD5 generator (requires a unix system with a md5sum command):
+spring.profiles.active=native
+
 # Your media directory:
-mediaregistry.directory=/home/media/
+mediaregistry.directory=/home/media/.p
 # The scan depth - that is the number of directories stacked into each other:
 mediaregistry.max.scanner.depth=10
 # List of media file suffixes to include in scanning:
@@ -17,9 +23,10 @@ mediaregistry.suffixList=.mpg,.mpeg,.mp4, .m4v, .mkv, .vob, .avi, .asf, .wmv, .d
 # Be careful: Setting threads to n will start n md5sum processes on your system.
 # As md5sum is heavily reading from your harddisk or SDD you should not set the value too high: 
 mediaregistry.threads=2
+
+# The following settings are only considered when the "native" profile is active
+
 # The path of the md5sum command:
 mediaregistry.md5sum.command=/usr/bin/md5sum
 # Use binary scanning:
 mediaregistry.md5sum.parameters=-b
-# The path of the rm command:
-mediaregistry.rm.command=/bin/rm
