Modified media scanner path.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ flyway.locations=classpath:/db
 spring.profiles.active=native
 
 # Your media directory:
-mediaregistry.directory=/home/media/.p
+mediaregistry.directory=/home/media/
 # The scan depth - that is the number of directories stacked into each other:
 mediaregistry.max.scanner.depth=10
 # List of media file suffixes to include in scanning:
