Renamed the log file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://picard.local/moviescan
 spring.datasource.username=moviescan
 spring.datasource.password=moviescan
 
-logging.file=mediaregistry.log
+logging.file=media-library-cleaner.log
 
 flyway.enabled=true
 flyway.check-location=true
