Added comment on how to configure the server port.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ flyway.enabled=true
 flyway.check-location=true
 flyway.locations=classpath:/db
 
+# http Server port:
+#server.port=12080
+	
 # Your media directory:
 mediaregistry.directory=/home/media/
 # The scan depth - that is the number of directories stacked into each other:
