--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,10 @@
 			<version>${apache.commons.io.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>net.vidageek</groupId>
 			<artifactId>mirror</artifactId>
 			<version>${mirror.version}</version>
